# avocado-vt

./: .cirrus.yml  .gitmodules  .pre-commit-config.yaml  .pylintrc  .pylintrc_utils  .readthedocs.yaml  .travis.yml  CODING_STYLE  LICENSE  MAINTAINERS  MANIFEST.in  Makefile  Makefile.include  PR_Review_And_Contribute_Practices.txt  README.CN.md  README.md  README.rst  __init__.py  avocado-plugins-vt.spec  avocado-static-checks.conf  avocado-vt.spec  commitlint.config.mjs  commitlint.config.ts  pyproject.toml  requirements-dev.txt  requirements-travis-python26.txt  requirements-travis.txt  requirements.txt  setup.py  spell.ignore  version.py  virt.py
.copr/: Makefile
.github/workflows/: ci.yml  codeql.yml  commitlint.yml  pre-commit.yml
avocado-vt/: .travis.yml
avocado_vt/: __init__.py  discovery.py  loader.py  options.py  test.py  utils.py
avocado_vt/conf.d/: vt.conf  vt_joblock.conf
avocado_vt/plugins/: auto.py  loader.py  manu.py  runner.py  vt.py  vt_bootstrap.py  vt_cluster.py  vt_init.py  vt_joblock.py  vt_list.py  vt_list_archs.py  (+4 more)
avocado_vt/vt_agent/: pyproject.toml
avocado_vt/vt_agent/src/avocado_vt/agent/: README.md  __main__.py
avocado_vt/vt_agent/src/avocado_vt/agent/app/: __init__.py  args.py  cmd.py
avocado_vt/vt_agent/src/avocado_vt/agent/core/: __init__.py  data_dir.py  logger.py
avocado_vt/vt_agent/src/avocado_vt/agent/core/rpc/: __init__.py  server.py  service.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/connect_client/: qemu.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/env_setuper/: __init__.py  core.py  networking.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/images/: __init__.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/images/qemu/: qemu_image_handlers.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/instance/: __init__.py  libvirt.py  qemu.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/instance/utils/qemu_devices/: __init__.py  cpu.py  debug.py  disk.py  filesystem.py  firmware.py  graphic.py  iommu.py  iothread.py  machine.py  memory.py  monitor.py  net.py  numa.py  os.py  rng.py  rtc.py  serial.py  soundcard.py  throttle_group.py  tpm.py  usb.py  vga.py  vsock.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/instance/utils/qemu_devices/controllers/: pci.py  usb.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/migration/: __init__.py  qemu.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/resource_backings/: __init__.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/resource_backings/network/: __init__.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/resource_backings/network/tap/: tap_network_connection.py
avocado_vt/vt_agent/src/avocado_vt/agent/drivers/resource_backings/storage/nfs/: nfs_pool_connection.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/: __init__.py  connect.py  console.py  image.py  image_manager.py  resource_backing.py  resource_backing_manager.py  vmm.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/images/: __init__.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/images/qemu/: qemu_image_handlers.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/resource_backings/: __init__.py  backing.py  pool_connection.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/resource_backings/network/: __init__.py  nic_port_backing.py  port_backing.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/resource_backings/network/tap/: __init__.py  tap_network_connection.py  tap_port_backing.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/resource_backings/storage/: __init__.py  file_volume_backing.py  volume_backing.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/resource_backings/storage/dir/: __init__.py  dir_pool_connection.py  dir_volume_backing.py
avocado_vt/vt_agent/src/avocado_vt/agent/managers/resource_backings/storage/nfs/: __init__.py  nfs_pool_connection.py  nfs_volume_backing.py
avocado_vt/vt_agent/src/avocado_vt/agent/services/: core.py  data_dir.py  env_setuper.py  image.py  memory.py  network.py  resource.py
avocado_vt/vt_agent/src/avocado_vt/agent/services/examples/: hello.py
avocado_vt/vt_agent/src/avocado_vt/agent/services/host/: cpu.py  platform.py
avocado_vt/vt_agent/src/avocado_vt/agent/services/virt/: __init__.py  connect.py  cpu.py  firmware.py  serial.py  vmm.py
avocado_vt/vt_agent/src/avocado_vt/agent/services/virt/tools/: __init__.py  qemu.py
avocado_vt/vt_agent/src/avocado_vt/vt_agent/: README.md  __main__.py
avocado_vt/vt_agent/src/avocado_vt/vt_agent/app/: __init__.py  args.py  cmd.py
avocado_vt/vt_agent/src/avocado_vt/vt_agent/core/: __init__.py  data_dir.py  logger.py
avocado_vt/vt_agent/src/avocado_vt/vt_agent/core/rpc/: __init__.py  server.py  service.py
avocado_vt/vt_agent/src/avocado_vt/vt_agent/services/: api.py
avocado_vt/vt_agent/src/avocado_vt/vt_agent/services/examples/: hello.py
contrib/: create_lxc_container.sh
debian/: changelog  control  watch
docs/: Makefile
samples/: hostname.py  service.py
scripts/: build_docs.py  cd_hash.py  download_manager.py  koji_pkgspec.py  logging_config.py  package_jeos.py  parallel.py  perf.conf  regression.py  scan_results.py  tapfd_helper.py  virt_disk.py
selftests/: __init__.py  checkall  modules_boundaries  run
test-providers.d/: io-github-autotest-libvirt.ini  io-github-autotest-qemu.ini  io-github-spiceqa-spice.ini
tools/: build_docs.py  cd_hash.py  download_manager.py  koji_pkgspec.py  package_jeos.py  virt_disk.py
virttest/: 1  RFBDes.py  __init__.py  _wrappers.py  aexpect.py  arch.py  asset.py  base_installer.py  block.py  bootstrap.py  build_helper.py  cartesian_config.py  ceph.py  cmd_parser.py  compat.py  compat_52lts.py  cpu.py  curl.py  data_dir.py  data_plane.py  defaults.py  disk.py  element_path.py  element_tree.py  env_process.py  env_process.py.orig  error_context.py  error_event.py  funcatexit.py  gluster.py  graphical_console.py  guest_agent.py  guest_dump_file_manager.py  http_server.py  installer.py  installer_unittest.py  intertest_setup.py  ip_sniffing.py  iscsi.py  iscsi_unittest.py  (+126 more)
(+1414 files in other folders)
