[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "avocado-framework-plugin-vt"
dynamic = ["version"]
description = "Avocado Plugin for Virtualization Testing"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    { name = "Avocado Developers", email = "avocado-devel@redhat.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "netifaces",
    "packaging",
    "six",
    "aexpect",
    "avocado-framework>=82.1",
]

[project.urls]
Homepage = "http://github.com/avocado-framework/avocado-vt"
Documentation = "https://avocado-vt.readthedocs.io"
Issues = "https://github.com/avocado-framework/avocado-vt/issues"

[tool.hatch.version]
source = "code"
path = "__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
    "avocado_vt",
    "virttest",
]

[tool.hatch.envs.hatch-static-analysis]
dependencies = ["black==22.3.0", "isort==5.10.1", "pylint==2.15.10", "pyenchant==3.2.2"]

[tool.hatch.envs.hatch-static-analysis.scripts]
format-check = [
    "black --check --diff --color {args:.}",
    "isort --check-only --diff {args:.}",
]
format-fix = [
    "isort {args:.}",
    "black {args:.}",
]
lint-check = [
    "pylint --errors-only {args:.}"
]
lint-fix = "lint-check"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pylint."messages control"]
disable = ["all"]
enable = ["spelling"]

[tool.pylint.spelling]
spelling-dict = "en_US"
spelling-private-dict-file = "spell.ignore"

[project.scripts]
avocado-runner-avocado-vt = "avocado_vt.plugins.vt_runner:main"

[project.entry-points."avocado.plugins.settings"]
vt-settings = "avocado_vt.plugins.vt_settings:VTSettings"

[project.entry-points."avocado.plugins.cli"]
vt-list = "avocado_vt.plugins.vt_list:VTLister"
vt = "avocado_vt.plugins.vt:VTRun"

[project.entry-points."avocado.plugins.cli.cmd"]
vt-bootstrap = "avocado_vt.plugins.vt_bootstrap:VTBootstrap"
vt-list-guests = "avocado_vt.plugins.vt_list_guests:VTListGuests"
vt-list-archs = "avocado_vt.plugins.vt_list_archs:VTListArchs"

[project.entry-points."avocado.plugins.result_events"]
vt-joblock = "avocado_vt.plugins.vt_joblock:VTJobLock"

[project.entry-points."avocado.plugins.init"]
vt-init = "avocado_vt.plugins.vt_init:VtInit"

[project.entry-points."avocado.plugins.resolver"]
avocado-vt = "avocado_vt.plugins.vt_resolver:VTResolver"

[project.entry-points."avocado.plugins.discoverer"]
avocado-vt = "avocado_vt.plugins.vt_resolver:VTDiscoverer"

[project.entry-points."avocado.plugins.runnable.runner"]
avocado-vt = "avocado_vt.plugins.vt_runner:VTTestRunner"
